# production-fastapi-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
src/app/: main.py
src/app/api/routes/: health.py
src/app/core/: config.py
src/app/db/: session.py
tests/: test_health.py
