[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "production-fastapi-template"
version = "0.1.0"
description = "A production-style FastAPI backend template with PostgreSQL, authentication, migrations, testing, and CI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Kağan Ülker" }
]
keywords = [
    "fastapi",
    "postgresql",
    "sqlalchemy",
    "alembic",
    "jwt",
    "backend",
    "api"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]
dependencies = [
    "alembic>=1.16,<2.0",
    "fastapi>=0.115,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.7,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-cov>=6.0,<8.0",
    "ruff>=0.9,<1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80"
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "SIM",
    "RUF"
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false